alteracao cor de links

--- a/curriculo.html
+++ b/curriculo.html
@@ -36,7 +36,7 @@
                 <div class="curriculo-intro">
                     <h1>Curriculo</h1>
                     <h2>OBJETIVO PROFISSIONAL:</h2>
-                    <p>Vaga como Product Designer Júnior</p>
+                    <p>Vaga como UX/UI Designer Júnior</p>
                 </div>
 
                 
