Atualizacao geral - patch 2.0

--- a/bikcraft.html
+++ b/bikcraft.html
@@ -33,29 +33,29 @@
         <main class="proj-pg-bg">
             <div class="proj-pg-intro cor-3">
                 <div>
-                    <h1>Bikcraft</h1>
+                    <h1 fadeInDown data-anime="100">Bikcraft</h1>
                 </div>
-                <img src="./img/9-bikcraft/imagens/1-banner.jpg" alt="banner">
+                <img src="./img/9-bikcraft/imagens/1-banner.jpg" alt="banner"fadeInDown data-anime="200">
             </div>
 
             <div class="proj-pg-links cor-3">
-                <p>Dê uma olhada no <a href="https://www.figma.com/proto/r2X4xf7bsPWlwmrpijd5hs/Bikekraft?page-id=0%3A1&node-id=2%3A85&starting-point-node-id=2%3A85" target="_blank">Protótipo</a></p>
-                <p>Dê uma olhada no em HTML pelo link: <a href="https://carlos-hs-david.github.io/bikcraft-carlos.github.io/" target="_blank">Site Bikecraft</a></p>  
+                <p fadeInDown data-anime="300">Dê uma olhada no <a href="https://www.figma.com/proto/r2X4xf7bsPWlwmrpijd5hs/Bikekraft?page-id=0%3A1&node-id=2%3A85&starting-point-node-id=2%3A85" target="_blank">Protótipo</a></p>
+                <p fadeInDown data-anime="400">Dê uma olhada no em HTML pelo link: <a href="https://carlos-hs-david.github.io/bikcraft-carlos.github.io/" target="_blank">Site Bikecraft</a></p>  
             </div>
 
             <div class="p-proj-sobre cor-3">                    
-                <h1>A ideia</h1>
-                <p>O Bikecraft é uma marca fictícia de venda de bicicletas elétricas que precisa de um site, feita durante o curso UI Design para iniciantes, da Origamid. Esse estudo foi desenvolvido para simular alguns processos do desenvolvimento de um site.</p>
+                <h1 fadeInDown data-anime="500">A ideia</h1>
+                <p fadeInDown data-anime="600">O Bikecraft é uma marca fictícia de venda de bicicletas elétricas que precisa de um site, feita durante o curso UI Design para iniciantes, da Origamid. Esse estudo foi desenvolvido para simular alguns processos do desenvolvimento de um site.</p>
             </div>
 
-            <div class="p-proj-public cor-3">                 
-                <h1>Público Alvo</h1>
-                <p>Pessoas interessadas em ter uma maior mobilidade. Normalmente, jovens com interesse em tecnologia, em sustentabilidade, de 25 a 35 anos, que já estejam bem empregados.</p>
-            </div>
-
-            <div class="p-proj-passos cor-3">                    
-                <h1>Os Primeiros passos</h1>
-                <p>Para entender mais sobre as necessidades, foi feito um questionário.</p>
+            <div class="p-proj-metodo cor-3">                    
+                <h1 fadeInDown data-anime="700">Método</h1>
+                <p fadeInDown data-anime="800">Para o desenvolvimento, foi utilizado o método de Design Thinking, Double Diamond, onde são mapeados os processos divergentes e convergentes dentro do processo de design.</p>
+                <img src="./img/9-bikcraft/imagens/2-design thinking.jpg" alt="thinking" fadeInDown data-anime="900">
+                <p class="p-proj-metodo cor-p1">1 - Descobrir:</p><p>Foram feitas algumas pesquisas para entender melhor sobre o produto a ser desenvolvido, com um Briefing com o cliente e um Benchmark com a concorrência</p>
+                <p class="p-proj-metodo cor-p1">2 - Definir:</p><p>Com os dados na mão, foi possível  mapear o público alvo, utilizando a criação de um Storytelling, para ajudar na elaboração de uma persona. A identificação de Stakeholders também é um estudo que ajuda a definir os envolvidos no processo.</p>
+                <p class="p-proj-metodo cor-p1">3 - Desenvolvimento:</p><p>No desenvolvimento, foram criados as primeiras ideias e wireframes de baixa e média fidelidade, para entender o que poderia ser desenvolvido para solucionar os problemas.</p>
+                <p class="p-proj-metodo cor-p1">4 - Entrega:</p><p>Wireframes de alta fidelidade, protótipo e site foram desenvolvidos moldados às necessidades observadas.</p>            
             </div>
 
             <div class="p-proj-briefing cor-3">                    
@@ -121,17 +121,18 @@
                     <li class="cor-p1">1 - https://www.vanmoof.com/en-US - 2 - https://www.tesla.com/?redirect=no</li>
                 </ul>
             </div>
-        
 
-        <section class="p-proj-benchmark-bg">
-            <div class="p-proj-benchmark cor-10">
+            <div class="p-proj-public cor-3">                 
+                <h1>Público Alvo</h1>
+                <p>Pessoas interessadas em ter uma maior mobilidade. Normalmente, jovens com interesse em tecnologia, em sustentabilidade, de 25 a 35 anos, que já estejam bem empregados.</p>
+            </div>
+
+            <div class="p-proj-benchmark cor-3">
                 <h1>Benchmark</h1>                
                 <p>Para entender melhor o que a concorrência estava fazendo, foi feito uma pesquisa de Benchmark e essa pesquisa, baseada nos sites que o cliente mostrou preferência, nos mostrou alguns pontos em comum, que foram usados para o desenvolvimento do site.</p>
-            </div>    
-            <div class="p-proj-benchmark-imagem">
-                <img src="./img/9-bikcraft/imagens/2-benchmark.jpg" alt="Benchmark">
-            </div>                              
-        </section>
+                <img src="./img/9-bikcraft/imagens/3-benchmark.jpg" alt="Benchmark">
+            </div>                 
+        
 
         <section>
             <div class="p-proj-story cor-3">
@@ -142,7 +143,7 @@
             <div class="p-proj-persona cor-3">
                 <h1>Persona</h1>
                 <p>Surgiu a partir do estudo do Story-Telling, personificando a pessoa da história, ajudando no desenvolvimento do produto, mantendo todos no foco das necessidades do cliente.</p>
-                <img src="./img/9-bikcraft/imagens/3-persona.jpg" alt="Persona">
+                <img src="./img/9-bikcraft/imagens/4-persona.jpg" alt="Persona">
             </div>
             <div class="p-proj-stake cor-3">
                 <h1>Identificação de Stakeholders</h1>
@@ -151,7 +152,7 @@
             <div class="p-proj-desenv cor-3">
                 <h1>O desenvolvimento do Projeto</h1>
                 <p>Foi criado um site para atender as necessidades do cliente, sendo desenvolvido, a partir da análise do Briefing do cliente, do estudo da concorrência e de um levantamento do público do cliente. Com o desenvolvimento da ideia, houve algumas mudanças, como a mudança de alguns títulos ou a ordem de aparência do comentário do cliente e das parcerias, que foram invertidas no seu desenvolvimento.</p>
-                <img src="./img/9-bikcraft/imagens/4-rascunho.jpg" alt="Rascunho">
+                <img src="./img/9-bikcraft/imagens/5-rascunho.jpg" alt="Rascunho">
             </div>
             <div class="p-proj-fluxo cor-3">
                 <h1>Fluxo</h1>
@@ -161,7 +162,7 @@
                 <p>Voltando à página principal, na área dos componentes, você também será redirecionado para a página Bicicletas.</p>
                 <p>Na página principal, na área Parceiros e Comentários não existem redirecionamentos.</p>
                 <p>Mais abaixo, na página principal, tem a página de seguros, onde você pode ter mais informações, caso queira contratar um seguro, e sendo redirecionado para a página Orçamentos, caso queira contratar um seguro.</p>
-                <img src="./img/9-bikcraft/imagens/5-fluxo.jpg" alt="Fluxo">
+                <img src="./img/9-bikcraft/imagens/6-fluxo.jpg" alt="Fluxo">
             </div>
             <div class="p-proj-cor cor-3">
                 <h1>Estilo</h1>                
@@ -194,6 +195,7 @@
                 </div>
             </div>
         </footer>
+        <script src="./Plugins/simple-anime.js"></script>
         <script src="./js/script.js"></script>    
     </body>
 </html>
