--- a/contatos.html
+++ b/contatos.html
@@ -33,26 +33,34 @@
         </header>
 
         <main class="contato-bg">
-          <div class="contato-titulo cor-0">
-            <h1>Contatos</h1>
-          </div>
-            <div class="contato-conteudo cor-0">
-                <div>                
-                    <img src="./img/3-contato/icons/1-localizacao.svg" width="30" height="40" alt="Nion">                
-                    <img src="./img/3-contato/icons/2-contato.svg" width="40" height="32" alt="Nion">                
-                    <img src="./img/3-contato/icons/3-whatsapp.svg" width="48" height="48" alt="Nion">                                
-                </div>
+            <div class="contato-intro">
+                <div class="contato-titulo cor-0">
+                    <h1 fadeInDown data-anime="100">Contatos</h1>
+                </div>            
                 <div>
-                    <h3>Vila São Paulo – São Paulo, SP</h3>
-                    <h3>carlos.hs.david@gmail.com</h3>
-                    <h3>(11)98115-1906</h3>
+                    <img src="./img/13-contatos/TI.jpg" alt="Imagem PC"data-anime="100">
                 </div>
             </div>
+            <div class="contato-conteudo cor-0">                
+                <ul class="contato-icone">                
+                    <li><img src="./img/3-contato/icons/1-localizacao.svg" width="30" height="40" alt="Nion" fadeInDown data-anime="200"></li>                
+                    <li><img src="./img/3-contato/icons/2-contato.svg" width="40" height="32" alt="Nion" fadeInDown data-anime="300"></li>                
+                    <li><img src="./img/3-contato/icons/3-whatsapp.svg" width="48" height="48" alt="Nion"fadeInDown data-anime="400"></li>                                
+                </ul>
+                <ul class="contato-word">
+                    <li><h3 fadeInDown data-anime="200">Vila São Paulo – São Paulo, SP</h3></li>
+                    <li><h3 fadeInDown data-anime="300">carlos.hs.david@gmail.com</h3></li>
+                    <li><h3 fadeInDown data-anime="400">(11)98115-1906</h3></li>
+                </ul>
+            </div>
+
+            <div class="divisoria" fadeInDown data-anime="500"></div>
+
           <div class="conteudo-links">
             <div class="conteudo-titulo cor-0">
-                <h1>Redes Sociais</h1>
+                <h1 fadeInDown data-anime="600">Redes Sociais</h1>
             </div> 
-            <ul>
+            <ul fadeInDown data-anime="800">
                 <li><a href="https://www.linkedin.com/in/carlos-david-ux/" target="_blank"><img src="./img/0-footer/icons/2-linkedin.svg" width="150" height="150" alt="LinkedIn"></a></li>
                 <li><a href="https://www.behance.net/carlos-h-david" target="_blank"><img src="./img/0-footer/icons/4-behance.svg" width="150" height="150" alt="Behance"></a></li>
                 <li><a href="https://github.com/carlos-hs-david" target="_blank"><img src="./img/0-footer/icons/5-github.svg" width="150" height="150" alt="GitHub"></a></li>
@@ -76,6 +84,7 @@
                 </div>
             </div>
         </footer>
+        <script src="./Plugins/simple-anime.js"></script>
         <script src="./js/script.js"></script>  
     </body>
 </html>
