--- a/curriculo.html
+++ b/curriculo.html
@@ -34,23 +34,23 @@
         <main>
             <div class="curriculo-bg cor-3">
                 <div class="curriculo-intro">
-                    <h1>Curriculo</h1>
-                    <h2>OBJETIVO PROFISSIONAL:</h2>
-                    <p>Vaga como UX/UI Designer Júnior</p>
+                    <h1 fadeInDown data-anime="100">Curriculo</h1>
+                    <h2 fadeInDown data-anime="200">OBJETIVO PROFISSIONAL:</h2>
+                    <p fadeInDown data-anime="300">Vaga como UX/UI Designer Júnior</p>
                 </div>
 
                 
                 <div class="curriculo-qualificacoes">                    
-                    <h2>RESUMO DE QUALIFICAÇÕES:</h2>
-                    <h3>Profissional da área de Arquitetura com 10 anos de experiência, me especializando em Experiência do Usuário e com conhecimento nas seguintes atividades:</h3>
-                    <ul>                        
-                        <li>- Experiência com comércio eletrônico, marketing digital e análise de dados</li>
+                    <h2 fadeInDown data-anime="400">RESUMO DE QUALIFICAÇÕES:</h2>
+                    <h3 fadeInDown data-anime="500">Profissional da área de Arquitetura com 10 anos de experiência, me especializando em Experiência do Usuário e com conhecimento nas seguintes atividades:</h3>
+                    <ul fadeInDown data-anime="600">                        
+                        <li>- Experiência com comércio eletrônico, marketing digital, análise de dados e criação de sites</li>
                         <li>- Administração, gestão de projetos e orçamentos</li>
                         <li>- Treinamentos de pessoas</li>
                         <li>- Integração com todas as áreas, fornecendo dados e informações para tomada de decisão</li>
                     </ul>
-                    <h3>Principais Projetos:</h3>
-                    <ul>                        
+                    <h3 fadeInDown data-anime="700">Principais Projetos:</h3>
+                    <ul fadeInDown data-anime="800">                        
                         <li>- Implementação de um sistema de banco de dados 3D que ajudou a Leroy Merlin a cortar custos na implementação de novas lojas</li>
                         <li>- Implementação de métodos alternativos de monetização via redes sociais para o escritório de arquitetura 2SD Arquitetura</li> 
                     </ul>
@@ -58,8 +58,8 @@
                 
 
                 <div class="curriculo-formacao">
-                    <h2>FORMAÇÃO ACADÊMICA E IDIOMAS</h2>
-                    <ul>
+                    <h2 fadeInDown data-anime="900">FORMAÇÃO ACADÊMICA E IDIOMAS</h2>
+                    <ul fadeInDown data-anime="1000">
                         <li>Pós-Graduação – Design de produtos digitais - UX-UI – UNOPAR - Universidade Norte do Paraná– 2022 a 2023</li>
                         <li>Graduação – Arquitetura e Urbanismo – Universidade Anhembi Morumbi – 2009 a 2013</li>
                         <li>Inglês Avançado e espanhol básico</li>    
@@ -73,8 +73,8 @@
                         (Empresa de grande porte do segmento de Recursos Humanos)</h3>
                     <h4>Analista Merchandising de Layout - Leroy Merlin - Temporário</h4>
                     <ul>                        
-                        <li>Responsável pela criação de criar um banco de dados de equipamentos usados para expor os produtos de toda a marca Leroy Merlin Brasil, utilizando um software específico da Leroy e o Adobe Photoshop</li>
-                        <li>Principais Resultados e Projetos: participação no projeto, que tinha o objetivo de agilizar a criação de novas lojas, diminuindo os custos de marketing e logística</li>
+                        <li>Responsável pela criação de um banco de dados de equipamentos usados para expor os produtos de toda a marca Leroy Merlin Brasil, utilizando um software específico da Leroy e o Adobe Photoshop</li>
+                        <li>Principais Resultados e Projetos: participação no projeto, que tinha o objetivo de agilizar a criação de novas lojas, diminuindo os custos de marketing e logístic</li>
                     </ul>
                 </div>
                 <div>                    
@@ -82,7 +82,7 @@
                         (Microempresa do segmento de construção civil)</h3>
                         <h4>Sócio fundador</h4>
                     <ul>                        
-                        <li>Responsável pela administração da empresa, desenvolvimento projetos de arquitetura utilizando os softwares AutoCad e SketchUp, criação de conteúdo para divulgação com Photoshop, administração de redes sociais, Marketing Digital, pagamento (contas e salários) e negociação com clientes e fornecedores</li>
+                        <li>Responsável pela administração da empresa, desenvolvimento projetos de arquitetura utilizando os softwares AutoCad e SketchUp, criação de conteúdo para divulgação com Photoshop, administração de redes sociais, Marketing Digital, desenvolvimento e administração do site da empresa e negociação com clientes e fornecedores.</li>
                         <li>Principais Resultados e Projetos: criação métodos alternativos para monetizar as redes sociais da empresa, para que a mesma, não dependesse só de consultorias (que era o foco do escritório)</li>
                     </ul>     
                 </div>
@@ -94,15 +94,7 @@
                         <li>Lecionar disciplinas relacionadas a representação gráfica (Desenho técnico, Desenho Arquitetônico, AutoCad 2D) com o auxílio de apostilas e computadores</li>
                         <li>Principais Resultados e Projetos: mais de 20 alunos em Representação Gráfica e AutoCad na Escola de Arte ABRA durante este período</li>
                     </ul>     
-                </div>
-                <div>                    
-                    <h3>02/2016 a 07/2016 - Anderson Schmidt Arquitetura (Empresa de pequeno porte do segmento de construção civil)</h3>
-                    <h4>Projetista – Temporário</h4>
-                    <ul>                        
-                        <li>Projetar e fazer desenhos de arquitetura, design de interiores e projetos executivos. Organizar um banco de dados para a compra de móveis e auxiliar na rotina de orçamentos</li>
-                        <li>Principais Resultados e Projetos: participação em 6 projetos de design de interiores, sendo 2 finalizados e entregues em obra</li>
-                    </ul>     
-                </div>
+                </div>              
                 </div>
 
                 <div class="curriculo-adicional">
@@ -140,6 +132,7 @@
                 </div>
             </div>
         </footer>
+        <script src="./Plugins/simple-anime.js"></script>
         <script src="./js/script.js"></script>  
     </body>
 </html>
