--- a/devconverter.html
+++ b/devconverter.html
@@ -33,24 +33,24 @@
         <main class="proj-pg-bg">
             <div class="proj-pg-intro cor-3">
                 <div>
-                    <h1>DevConverter</h1>
+                    <h1 fadeInDown data-anime="100">DevConverter</h1>
                 </div>
-                <img src="./img/12-devconverter/imagens/1-banner.jpg" alt="banner">
+                <img src="./img/12-devconverter/imagens/1-banner.jpg" alt="banner" fadeInDown data-anime="100"fadeInDown data-anime="200">
             </div>
             
             <div class="proj-pg-links cor-3">                
-                <p>Dê uma olhada no em HTML pelo link: <a href="https://carlos-hs-david.github.io/devconverter.github.io/" target="_blank">Site DevConverter</a></p>                 
+                <p fadeInDown data-anime="300">Dê uma olhada no em HTML pelo link: <a href="https://carlos-hs-david.github.io/devconverter.github.io/" target="_blank">Site DevConverter</a></p>                 
             </div>
 
             <div class="p-proj-sobre cor-3">                    
-                <h1>O Projeto</h1>
-                <p>É sobre um conversor de moedas de Real para Euro ou de Real para Dólar feito em HTML, CSS e JavaScript.</p>
+                <h1 fadeInDown data-anime="400">O Projeto</h1>
+                <p fadeInDown data-anime="500">É sobre um conversor de moedas de Real para Euro ou de Real para Dólar feito em HTML, CSS e JavaScript.</p>
             </div>
 
             <div class="p-proj-desenv cor-3">                 
-                <h1>A interface</h1>
-                <p>Possui o Logo do jogo, no topo da página e, no centro da página, existem dois formulários, onde um pode ser preenchido com o valor em real e o outro, dá opções de seleção de encolha entre Euro e Dólar. Ao preencher o formulário, clica-se em converter e o resultado aparece logo abaixo.</p>
-                <img src="./img/12-devconverter/imagens/2-l1.jpg" alt="">
+                <h1 fadeInDown data-anime="600">A interface</h1>
+                <p fadeInDown data-anime="700">Possui o Logo do jogo, no topo da página e, no centro da página, existem dois formulários, onde um pode ser preenchido com o valor em real e o outro, dá opções de seleção de encolha entre Euro e Dólar. Ao preencher o formulário, clica-se em converter e o resultado aparece logo abaixo.</p>
+                <img src="./img/12-devconverter/imagens/2-l1.jpg" alt="Logo"fadeInDown data-anime="800">
             </div>            
         </main>
 
@@ -68,6 +68,7 @@
                 </div>
             </div>
         </footer>
+        <script src="./Plugins/simple-anime.js"></script>
         <script src="./js/script.js"></script>    
     </body>
 </html>
