--- a/guessnumber.html
+++ b/guessnumber.html
@@ -33,24 +33,24 @@
         <main class="proj-pg-bg">
             <div class="proj-pg-intro cor-3">
                 <div>
-                    <h1>Guessnumber</h1>
+                    <h1 fadeInDown data-anime="100">Guessnumber</h1>
                 </div>
-                <img src="./img/11-guessnumber/imagens/1-bunner.jpg" alt="banner">
+                <img src="./img/11-guessnumber/imagens/1-bunner.jpg" alt="banner" fadeInDown data-anime="200">
             </div>
             
             <div class="proj-pg-links cor-3">                
-                <p>Dê uma olhada no em HTML pelo link: <a href="https://carlos-hs-david.github.io/guessnumber.github.io/" target="_blank">Site GuessNumber</a></p>                 
+                <p fadeInDown data-anime="300">Dê uma olhada no em HTML pelo link: <a href="https://carlos-hs-david.github.io/guessnumber.github.io/" target="_blank">Site GuessNumber</a></p>                 
             </div>
 
             <div class="p-proj-sobre cor-3">                    
-                <h1>O Projeto</h1>
-                <p>É sobre um jogo feito em HTML, CSS e JavaScript que tem em sua premissa a advinhação de números de 1 a 10.</p>
+                <h1 fadeInDown data-anime="400">O Projeto</h1>
+                <p fadeInDown data-anime="500">É sobre um jogo feito em HTML, CSS e JavaScript que tem em sua premissa a advinhação de números de 1 a 10.</p>
             </div>
 
             <div class="p-proj-desenv cor-3">                 
-                <h1>A interface</h1>
-                <p>Possui o Logo do jogo, no topo da página e, no centro da página, existe um formulário que pode ser preechido com números de 0 a 10, tendo um bontão para verificar qual é o botão que a máquina está pensando. Abaixo, existe outro formulário que informa o resultado.</p>
-                <img src="./img/11-guessnumber/imagens/2-l1.jpg" alt="">
+                <h1 fadeInDown data-anime="600">A interface</h1>
+                <p fadeInDown data-anime="700">Possui o Logo do jogo, no topo da página e, no centro da página, existe um formulário que pode ser preechido com números de 0 a 10, tendo um bontão para verificar qual é o botão que a máquina está pensando. Abaixo, existe outro formulário que informa o resultado.</p>
+                <img src="./img/11-guessnumber/imagens/2-l1.jpg" alt="Logo" fadeInDown data-anime="800">
             </div>            
         </main>
 
@@ -68,6 +68,7 @@
                 </div>
             </div>
         </footer>
+        <script src="./Plugins/simple-anime.js"></script>
         <script src="./js/script.js"></script>    
     </body>
 </html>
