--- a/proj-html-css.html
+++ b/proj-html-css.html
@@ -34,22 +34,24 @@
 
         <main class="tech-bg">
             <div class="tech-titulo cor-0">
-                <h1>Projetos Por Tecnologias</h1>
+                <h1 fadeInDown data-anime="100">Projetos Por Tecnologias</h1>
             <div>
-            <div class="tech-programas cor-3">
+            <div class="tech-programas cor-3"fadeInDown data-anime="200">
                 <ul>                    
                     <li><a href="./proj-html-css.html"><img src="./img/1-home/icons/5-html.svg" width="200" height="200" alt="HTML">HTML</a></li>
                     <li><a href="./proj-html-css.html"><img src="./img/1-home/icons/6-css.svg" width="200" height="200" alt="CSS">CSS</a></li>
                     <li><a href="./proj-html-css.html"><img src="./img/1-home/icons/7-javascript.svg" width="200" height="200" alt="javascript">javascript</a></li>   
                 </ul>
             </div>
+
+            <div class="divisoria-pg"></div>
            
 
             <div class="projetos-links">
                 <div class="projetos-titulo cor-0">
-                    <h1>Projetos</h1>
+                    <h1 fadeInDown data-anime="300">Projetos</h1>
                 </div>            
-                    <ul class="projetos-lista cor-3">
+                    <ul class="projetos-lista cor-3"fadeInDown data-anime="400">
                         <li><a href="./nion.html"><img src="./img/1-home/images/2-nion.jpg" width="260" height="150" alt="Nion">Nion Restaurante Japonês</a></li>                        
                         <li><a href="./bikcraft.html"><img src="./img/1-home/images/4-bikcraft.jpg" width="260" height="150" alt="Nion">Bikcraft</a></li>
                         <li><a href="./guessnumber.html"><img src="./img/6-projhtml/imagens/3-guessnumber.jpg" width="260" height="150" alt="Nion">GuessNumber</a></li>
@@ -72,6 +74,7 @@
                 </div>
             </div>
         </footer>
+        <script src="./Plugins/simple-anime.js"></script> 
         <script src="./js/script.js"></script>  
     </body>
 </html>
