--- a/proj-xd-fig.html
+++ b/proj-xd-fig.html
@@ -34,21 +34,23 @@
 
         <main class="tech-bg">
             <div class="tech-titulo cor-0">
-                <h1>Projetos Por Tecnologias</h1>
+                <h1 fadeInDown data-anime="100">Projetos Por Tecnologias</h1>
             <div>
-            <div class="tech-programas cor-3">
+            <div class="tech-programas cor-3"fadeInDown data-anime="200">
                 <ul>
                     <li><a href="./proj-xd-fig.html"><img src="./img/1-home/icons/1-adobe xd.svg" width="200" height="200" alt="AdobeXD">AdobeXD</a></li>
                     <li><a href="./proj-xd-fig.html"><img src="./img/1-home/icons/2-figma.svg" width="200" height="200" alt="Figma">Figma</a></li>                    
                 </ul>
             </div>
+
+            <div class="divisoria-pg"></div>
            
 
             <div class="projetos-links">
                 <div class="projetos-titulo cor-0">
-                    <h1>Projetos</h1>
+                    <h1 fadeInDown data-anime="300">Projetos</h1>
                 </div>            
-                    <ul class="projetos-lista cor-3">
+                    <ul class="projetos-lista cor-3"fadeInDown data-anime="400">
                         <li><a href="./nion.html"><img src="./img/1-home/images/2-nion.jpg" width="260" height="150" alt="Nion">Nion Restaurante Japonês</a></li>
                         <li><a href="./drmichelangelo.html"><img src="./img/1-home/images/3-dr michelangelo.jpg" width="260" height="150" alt="Nion">Dr. Michelângelo</a></li>
                         <li><a href="./bikcraft.html"><img src="./img/1-home/images/4-bikcraft.jpg" width="260" height="150" alt="Nion">Bikcraft</a></li>
@@ -70,6 +72,7 @@
                 </div>
             </div>
         </footer>
+        <script src="./Plugins/simple-anime.js"></script> 
         <script src="./js/script.js"></script>  
     </body>
 </html>
