Atualicao do site. Adicao de projeto, Base Design System; atualizacao home; atualizacao curiculo; atualicacao pagina proj xd e fg.

--- a/curriculo.html
+++ b/curriculo.html
@@ -36,7 +36,7 @@
                 <div class="curriculo-intro">
                     <h1 fadeInDown data-anime="100">Curriculo</h1>
                     <h2 fadeInDown data-anime="200">OBJETIVO PROFISSIONAL:</h2>
-                    <p fadeInDown data-anime="300">Vaga como UX/UI Designer Júnior</p>
+                    <p fadeInDown data-anime="300">Vaga como UX/UI Designer</p>
                 </div>
 
                 
@@ -60,18 +60,19 @@
                 <div class="curriculo-formacao">
                     <h2 fadeInDown data-anime="900">FORMAÇÃO ACADÊMICA E IDIOMAS</h2>
                     <ul fadeInDown data-anime="1000">
-                        <li>Pós-Graduação – Design de produtos digitais - UX-UI – UNOPAR - Universidade Norte do Paraná– 2022 a 2023</li>
-                        <li>Graduação – Arquitetura e Urbanismo – Universidade Anhembi Morumbi – 2009 a 2013</li>
-                        <li>Inglês Avançado e espanhol básico</li>    
+                        <li>- Pós-Graduação – MBA em Gestão Ágil – UNOPAR - Universidade Norte do Paraná– 2023 a 2023 – Em Andamento</li>
+                        <li>-  Pós-Graduação – Design de produtos digitais - UX-UI – UNOPAR - Universidade Norte do Paraná– 2022 a 2023 - Concluído</li>
+                        <li>- Graduação – Arquitetura e Urbanismo – Universidade Anhembi Morumbi – 2009 a 2013 - Concluído</li>
+                        <li>- Inglês Avançado e espanhol básico</li>    
                     </ul>
                 </div>
                 
                 <div class="curriculo-experiencia">
                 <div>
-                    <h2>EXPERIÊNCIA PROFISSIONAL</h2>
+                    <h2 fadeInDown data-anime="1100">EXPERIÊNCIA PROFISSIONAL</h2>
                     <h3>09/2021 a 12/2021 	-  Gi Group Brasil Recursos Humanos
                         (Empresa de grande porte do segmento de Recursos Humanos)</h3>
-                    <h4>Analista Merchandising de Layout - Leroy Merlin - Temporário</h4>
+                    <h4>- Analista Merchandising de Layout - Leroy Merlin - Temporário</h4>
                     <ul>                        
                         <li>Responsável pela criação de um banco de dados de equipamentos usados para expor os produtos de toda a marca Leroy Merlin Brasil, utilizando um software específico da Leroy e o Adobe Photoshop</li>
                         <li>Principais Resultados e Projetos: participação no projeto, que tinha o objetivo de agilizar a criação de novas lojas, diminuindo os custos de marketing e logístic</li>
@@ -80,7 +81,7 @@
                 <div>                    
                     <h3>08/2017 a 09/2019 - 2SD Arquitetura e Design
                         (Microempresa do segmento de construção civil)</h3>
-                        <h4>Sócio fundador</h4>
+                        <h4>- Sócio fundador</h4>
                     <ul>                        
                         <li>Responsável pela administração da empresa, desenvolvimento projetos de arquitetura utilizando os softwares AutoCad e SketchUp, criação de conteúdo para divulgação com Photoshop, administração de redes sociais, Marketing Digital, desenvolvimento e administração do site da empresa e negociação com clientes e fornecedores.</li>
                         <li>Principais Resultados e Projetos: criação métodos alternativos para monetizar as redes sociais da empresa, para que a mesma, não dependesse só de consultorias (que era o foco do escritório)</li>
@@ -89,7 +90,7 @@
                 <div>                    
                     <h3>06/2015 a 02/2017 - Abra – Escola De Arte E Design
                         (Empresa de médio porte do segmento de Educação)</h3>
-                        <h4>Professor</h4>
+                        <h4>- Professor</h4>
                     <ul>                        
                         <li>Lecionar disciplinas relacionadas a representação gráfica (Desenho técnico, Desenho Arquitetônico, AutoCad 2D) com o auxílio de apostilas e computadores</li>
                         <li>Principais Resultados e Projetos: mais de 20 alunos em Representação Gráfica e AutoCad na Escola de Arte ABRA durante este período</li>
@@ -100,18 +101,18 @@
                 <div class="curriculo-adicional">
                     <h2>INFORMAÇÕES ADICIONAIS</h2>
                     <ul>                        
-                        <li>UX Design de A a Z – Udemy – 11,5 horas. Conclusão: 06/2022</li>
-                        <li>HTML e CSS para Iniciantes – Origamid – 46 horas. Conclusão:07/2022</li>
-                        <li>Adobe XD – Instituição: Origamid. – 6 horas. Conclusão: 05/2022</li>
-                        <li>Curso Completo de Design de Interface – Instituição: Udemy. – 20,5 horas. Conclusão: 03/2022</li>
-                        <li>UI Design para Iniciantes – Instituição: Origamid. – 34 horas. Conclusão: 05/2022</li>
-                        <li>UX Design - Heurísticas – Instituição: Origamid. – 16 horas. Conclusão: 05/2022</li>
-                        <li>Tipografia Avançada – Instituição: Origamid. – 6 horas. Conclusão: 06/2022</li>
-                        <li>Curso Excel Avançado – Fundação Bradesco – 30 horas. Conclusão: 02/2020</li>
-                        <li>Conhecimentos Avançados de Office</li>
-                        <li>Conhecimento intermediário em Figma, Adobe Photoshop, Adobe Illustrator</li>
-                        <li>Conhecimentos básicos em HTML, CSS e JavaScript</li>
-                        <li>Conhecimentos em Design Thinging, Heurísticas, Benchmark, criação de protótipos (baixa, média e alta    fidelidade), metodologias ágeis (Scrum e Kanban)</li>
+                        <li>- UX Design de A a Z – Udemy – 11,5 horas. Conclusão: 06/2022</li>
+                        <li>- HTML e CSS para Iniciantes – Origamid – 46 horas. Conclusão:07/2022</li>
+                        <li>- Adobe XD – Instituição: Origamid. – 6 horas. Conclusão: 05/2022</li>
+                        <li>- Curso Completo de Design de Interface – Instituição: Udemy. – 20,5 horas. Conclusão: 03/2022</li>
+                        <li>- UI Design para Iniciantes – Instituição: Origamid. – 34 horas. Conclusão: 05/2022</li>
+                        <li>- UX Design - Heurísticas – Instituição: Origamid. – 16 horas. Conclusão: 05/2022</li>
+                        <li>- Tipografia Avançada – Instituição: Origamid. – 6 horas. Conclusão: 06/2022</li>
+                        <li>- Curso Excel Avançado – Fundação Bradesco – 30 horas. Conclusão: 02/2020</li>
+                        <li>- Conhecimentos Avançados de Office</li>
+                        <li>- Conhecimento intermediário em Figma, Adobe Photoshop, Adobe Illustrator</li>
+                        <li>- Conhecimentos básicos em HTML, CSS e JavaScript</li>
+                        <li>- Conhecimentos em Design Thinging, Heurísticas, Benchmark, criação de protótipos (baixa, média e alta fidelidade), metodologias ágeis (Lean UX, Scrum, Kanban).</li>
                     </ul>
                 </div>
             </div>
