--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         <main>           
             <div class="intro-bg" fadeInDown data-anime="100">                
                 <div class="intro-conteudo cor-3" fadeInDown data-anime="100">                    
-                    <h1 fadeInDown data-anime="200">Carlos David, UX/UI Designer Junior</h1>                 
-                    <p fadeInDown data-anime="200">Olá, meu nome é Carlos David tenho 32 anos e sou de São Paulo (SP), formado em Arquitetura e Urbanismo, porém sempre fui apaixonado por interfaces e por resolver problemas e por esta razão, fui estudar mais sobre UX.</p>
+                    <h1 fadeInDown data-anime="200">Carlos David, UX/UI Designer</h1>                 
+                    <p fadeInDown data-anime="200">Olá, meu nome é Carlos David, tenho 32 anos sou um formado em Arquitetura e Urbanismo, com 10 anos de experiência na construção civil, com Especializado em Experiência do Usuário e atualmente me especializando em Metodologias Ágeis, sendo muito apaixonado por interfaces e por resolver problemas.
+
+                    </p>
                 </div>              
                     <div class="intro-img">
                         <img src="./img/1-home/images/1-foto carlos.jpg" alt="Foto Carlos" fadeInDown data-anime="200">
@@ -53,9 +55,9 @@
             <div class="proj-links">
                 <ul class="proj-links cor-3" fadeInDown data-anime="400">
                     <li><a href="./nion.html"><img src="./img/1-home/images/2-nion.jpg" width="260" height="150" alt="Nion">Nion Restaurante Japonês</a></li>
-                    <li><a href="./drmichelangelo.html"><img src="./img/1-home/images/3-dr michelangelo.jpg" width="260" height="150" alt="Nion">Dr. Michelângelo</a></li>
-                    <li><a href="./bikcraft.html"><img src="./img/1-home/images/4-bikcraft.jpg" width="260" height="150" alt="Nion">Bikcraft</a></li>
-                    <li><a href="./acoaching.html"><img src="./img/1-home/images/5-coach.jpg" width="260" height="150" alt="Nion">Academia Coaching</a></li>
+                    <li><a href="./drmichelangelo.html"><img src="./img/1-home/images/3-dr michelangelo.jpg" width="260" height="150" alt="Dr.Michelangelo">Dr. Michelângelo</a></li>
+                    <li><a href="./bikcraft.html"><img src="./img/1-home/images/4-bikcraft.jpg" width="260" height="150" alt="Bikcraft">Bikcraft</a></li>
+                    <li><a href="./basedesignsystem.html"><img src="./img/1-home/images/6-card-design-sistem.jpg" width="260" height="150" alt="Base Design System">Base Design System</a></li>
                 </ul>
             </div>
         </section>
