--- a/nion.html
+++ b/nion.html
@@ -8,7 +8,7 @@
 
         <link rel="icon" href="./img/favcon/favcon2.svg" type="image/svg+xml">
         <!-- css -->
-        <link rel="stylesheet" href="./css/style.min.css">
+        <link rel="stylesheet" href="./css/style.css">
         <!-- font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
