--- a/proj-xd-fig.html
+++ b/proj-xd-fig.html
@@ -39,7 +39,7 @@
             <div class="tech-programas cor-3"fadeInDown data-anime="200">
                 <ul>
                     <li><a href="./proj-xd-fig.html"><img src="./img/1-home/icons/1-adobe xd.svg" width="200" height="200" alt="AdobeXD">AdobeXD</a></li>
-                    <li><a href="./proj-xd-fig.html"><img src="./img/1-home/icons/2-figma.svg" width="200" height="200" alt="Figma">Figma</a></li>                    
+                    <li><a href="./proj-xd-fig.html"><img src="./img/1-home/icons/2-figma.svg" width="200" height="200" alt="Figma">Figma</a></li>                                        
                 </ul>
             </div>
 
@@ -54,6 +54,7 @@
                         <li><a href="./nion.html"><img src="./img/1-home/images/2-nion.jpg" width="260" height="150" alt="Nion">Nion Restaurante Japonês</a></li>
                         <li><a href="./drmichelangelo.html"><img src="./img/1-home/images/3-dr michelangelo.jpg" width="260" height="150" alt="Nion">Dr. Michelângelo</a></li>
                         <li><a href="./bikcraft.html"><img src="./img/1-home/images/4-bikcraft.jpg" width="260" height="150" alt="Nion">Bikcraft</a></li>
+                        <li><a href="./basedesignsystem.html"><img src="./img/4-projxd/imagens/card-design-sistem.jpg" width="260" height="150" alt="Nion">Base Design System</a></li>
                     </ul>                
             </div>
         </main>      
